--- a/platforms/ios/www/templates/inviteUserList.html
+++ b/platforms/ios/www/templates/inviteUserList.html
@@ -1,4 +1,4 @@
-
+<div id="invite-friends">Invite Friends</div>
 <div id="search-for-friends">
     <form id="search-users" name="search-users-form" action="#">
         <input placeholder="Find Friends on Fabric" type="text" onfocus="this.placeholder=''" onfocusout="this.placeholder='Find Friends on Fabric'" />
