fixing counter on swipe

--- a/platforms/ios/www/templates/discovery.html
+++ b/platforms/ios/www/templates/discovery.html
@@ -15,10 +15,10 @@ var terms = [{
         "present": "hear",
         "past": "heard"
     }];
+console.log(totalMovies);
 %>
-
 <div id="swipe-heading">
-    <b id="rated"><%= currentPos %></b>
+    <b id="rated"><%= totalMovies %></b>
     <div class="inlineb">
         <h1 id="swipe-title">Title</h1>
         <div id="stats">
