--- a/platforms/ios/www/css/welcome.css
+++ b/platforms/ios/www/css/welcome.css
@@ -2,8 +2,8 @@
 .welcome-screen {
 	position: relative;
 	z-index: 1000;
-	width: 640px;
-	height: 1136px;
+	width: 100%;
+	height: 100%;
 	background-image: url('../images/welcome/welcome-screen-1.jpg');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
@@ -38,13 +38,13 @@
 .headline {
 	font-family: "San Francisco Text", Helvetica, Sans-serif;
 	font-weight: 800;
-	font-size: 48px;
+	font-size: 24px;
 }
 
 .sub-headline, .instruction {
 	font-family: "Helvetica Neue Light", Helvetica, Sans-serif;
 	font-weight: 200;
-	font-size: 38px;
+	font-size: 19px;
 	line-height: 130%;
 }
 
