--- a/platforms/ios/www/templates/welcome/welcomeScreen1.html
+++ b/platforms/ios/www/templates/welcome/welcomeScreen1.html
@@ -13,8 +13,8 @@
 
 			<div class="mask"></div>
 
-			<div class="welcome-text-container">
-				<section class="welcome-text">
+			<div class="welcome-message-container">
+				<section class="welcome-message">
 					<h1 class="headline">Welcome Aboard</h1>
 					<h2 class="sub-headline">We have recommendations &amp; tastemates waiting for you inside!</h2>
 					<p class="instruction">Just tell us one of your favorite movies to get started.</p>
