fixes to welcome screens

--- a/platforms/ios/www/templates/welcomeScreen1.html
+++ b/platforms/ios/www/templates/welcomeScreen1.html
@@ -1,18 +1,18 @@
 	
-	<article class="welcome-screen" id="welcome-screen-1">
+<article class="welcome-screen" id="welcome-screen-1">
 
-		<div class="mask"></div>
+	<div class="mask"></div>
 
-		<div class="welcome-text-container">
-			<section class="welcome-text">
-				<h1 class="headline">Welcome Aboard</h1>
-				<h2 class="sub-headline">We have recommendations &amp; tastemates waiting for you inside!</h2>
-				<p class="instruction">Just tell us one of your favorite movies to get started.</p>
-			</section>
-		</div>
+	<div class="welcome-message-container">
+		<section class="welcome-message">
+			<h1 class="headline">Welcome Aboard</h1>
+			<h2 class="sub-headline">We have recommendations &amp; tastemates waiting for you inside!</h2>
+			<p class="instruction">Just tell us one of your favorite movies to get started.</p>
+		</section>
+	</div>
 
-		<form class="single-field-form user-favorite-interest">
-			<input type="text" class="movie-interest" placeholder="Search a movie...">
-			<button class="go">Go</button>
-		</form>
-	</article>
+	<form class="single-field-form user-favorite-interest">
+		<input type="text" class="movie-interest" placeholder="Search a movie...">
+		<button class="go">Go</button>
+	</form>
+</article>
