--- a/platforms/ios/www/css/welcome.css
+++ b/platforms/ios/www/css/welcome.css
@@ -109,6 +109,7 @@ html {
 }
 
 .headline {
+	margin-bottom: 3rem;
 	font-family: "San Francisco Text", Helvetica, Sans-serif;
 	font-weight: 600;
 	font-size: 3.6rem;
@@ -128,7 +129,7 @@ html {
 	height: 4rem;
 	margin: 0 auto;
 	padding: 1.2rem;
-	border-radius: 1em;
+	border-radius: 0.5em;
 	background-color: rgba(255,255,255,0.25);
 }
 
@@ -136,7 +137,7 @@ html {
 	width: 70%;
 	height: 4rem;
 	padding: 0 1.2rem;
-	background-color: rgba(255,255,255,0.6);
+	background-color: rgba(255,255,255,0.7);
 	border: medium none;
 	font-size: 2rem;
 	line-height: 4rem;
@@ -149,7 +150,8 @@ html {
 	width: 15%;
 	padding: 0;
 	border: medium none;
-	border-radius: 0.7rem;
+	border-radius: 0.5rem;
+	background-color: rgba(255, 255, 255, 0.8);
 	color: #e6001a;
 	font-size: 2rem;
 	font-weight: 600;
@@ -165,18 +167,18 @@ html {
 	overflow: auto;
 }
 
-.tastemate {
+.tastemate-item {
 	float: left;
 	margin: 0 0.5rem;
 }
 
-.tastemate .avatar, .tastemate.more {
+.tastemate-item .avatar, .tastemate-item.more {
 	width: 4rem;
 	height: 4rem;
 	border-radius: 2rem;
 }
 
-.tastemate.more {
+.tastemate-item.more {
 	background-color: #aaa;
 	font-family: "Helvetica Neue",Helvetica,sans-serif;
 	font-size: 1.5rem;
