--- a/platforms/ios/www/css/welcome.css
+++ b/platforms/ios/www/css/welcome.css
@@ -20,7 +20,7 @@ html {
 	}
 } 
 
-/* iPhone 6+ */
+ iPhone 6+ 
 @media screen and (min-device-width : 414px) and (max-device-width : 736px) and (-webkit-min-device-pixel-ratio : 3) {
 	
 	html {
@@ -45,6 +45,12 @@ html {
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	color: #fff;
+}
+.welcome-container {
+	overflow-y: scroll;
+	position: relative;
+	height: 100%;
+	width: 100%;
 }
 
 #welcome-screen-1 {
