--- a/platforms/ios/www/templates/welcomeScreen1.html
+++ b/platforms/ios/www/templates/welcomeScreen1.html
@@ -2,17 +2,19 @@
 <article class="welcome-screen" id="welcome-screen-1">
 
 	<div class="mask"></div>
+	<div class="welcome-container">
+		<div class="welcome-message-container">
+			<section class="welcome-message">
+				<h1 class="headline">Welcome Aboard</h1>
+				<h2 class="sub-headline">We have recommendations &amp; tastemates waiting for you inside!</h2>
+				<p class="instruction">Just tell us one of your favorite movies to get started.</p>
+			</section>
+		</div>
 
-	<div class="welcome-message-container">
-		<section class="welcome-message">
-			<h1 class="headline">Welcome Aboard</h1>
-			<h2 class="sub-headline">We have recommendations &amp; tastemates waiting for you inside!</h2>
-			<p class="instruction">Just tell us one of your favorite movies to get started.</p>
-		</section>
+		<form class="single-field-form user-favorite-interest">
+			<input type="text" class="movie-interest" placeholder="Search a movie...">
+			<button class="go">Go</button>
+		</form>
+		<div id="search-results"></div>
 	</div>
-
-	<form class="single-field-form user-favorite-interest">
-		<input type="text" class="movie-interest" placeholder="Search a movie...">
-		<button class="go">Go</button>
-	</form>
 </article>
