--- a/platforms/ios/www/templates/welcomeScreen2.html
+++ b/platforms/ios/www/templates/welcomeScreen2.html
@@ -18,6 +18,6 @@
 			</section>
 		</div>
 
-		<button class="ack">Let's Go</button>
+		<button class="ack welcome-2">Let's Go</button>
 
 	</article>
