--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -6114,7 +6114,7 @@ button#done {
     height: 60px;
 }
 #search-results .result .result-info {
-    font-size: 1.3em;
+    font-size: 0.8em;
 }
 #search-results .result .poster,
 #status-drop .result .poster,
@@ -6142,6 +6142,7 @@ button#done {
 #menu-drop .result h1 {
     color: black;
     padding-left: 5px;
+    padding-top: 5px;
     font-family: Helvetica, Ariel;
     line-height: 15px;
 }
@@ -7206,42 +7207,42 @@ h1.pop-up-content {
     position: relative;
     z-index: 500;
     width: 84%;
-    height: 4rem;
+    height: 2rem;
     margin: 0 auto;
-    padding: 1.2rem;
-    border-radius: 0.5em;
+    padding: 0.6rem;
+    border-radius: 0.25em;
     background-color: rgba(255,255,255,0.25);
 }
 
 .user-favorite-interest .movie-interest {
     width: 70%;
-    height: 4rem;
-    padding: 0 1.2rem;
+    height: 2rem;
+    padding: 0 0.6rem;
     background-color: rgba(255,255,255,0.7);
     border: medium none;
-    font-size: 2rem;
-    line-height: 4rem;
+    font-size: 1rem;
+    line-height: 2rem;
     text-align: left;
 }
 
 .user-favorite-interest .go {
     float: right;
-    height: 4rem;
+    height: 2rem;
     width: 15%;
     padding: 0;
     border: medium none;
-    border-radius: 0.5rem;
+    border-radius: 0.25rem;
     background-color: rgba(255, 255, 255, 0.8);
     color: #e6001a;
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: 600;
     text-align: center;
     text-transform: uppercase;
 }
 
 .tastemates-row {
-    width: 30.3rem;
-    margin: 1.8rem auto;
+    width: 15rem;
+    margin: 0.9rem auto;
     padding: 0;
     list-style: none;
     overflow: auto;
@@ -7249,21 +7250,21 @@ h1.pop-up-content {
 
 .tastemate-item {
     float: left;
-    margin: 0 0.5rem;
+    margin: 0 0.25rem;
 }
 
 .tastemate-item .avatar, .tastemate-item.more {
-    width: 4rem;
-    height: 4rem;
-    border-radius: 2rem;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 1rem;
 }
 
 .tastemate-item.more {
     background-color: #aaa;
     font-family: "Helvetica Neue",Helvetica,sans-serif;
-    font-size: 1.5rem;
+    font-size: 0.75rem;
     font-weight: 600;
-    line-height: 4rem;
+    line-height: 2rem;
     text-align: center;
     color: #fff;
 }
@@ -7273,13 +7274,13 @@ h1.pop-up-content {
     z-index: 500;
     display: block;
     width: 60%;
-    height: 6rem;
+    height: 3rem;
     margin: 0 auto;
     border: medium none;
-    border-radius: 0.5rem;
+    border-radius: 0.25rem;
     background-color: rgba(200, 200, 200, 0.5);
     font-family: "Helvetica Neue",Helvetica,sans-serif;
-    font-size: 3rem;
+    font-size: 1.5rem;
     font-weight: 400;
     text-align: center;
     color: #fff;
@@ -7287,16 +7288,16 @@ h1.pop-up-content {
 
 #welcome-screen-3 .ack {
     width: 28%;
-    height: 5rem;
-    margin-top: 17rem;
-    font-size: 2.5rem;
+    height: 2.5rem;
+    margin-top: 8.5rem;
+    font-size: 1.25rem;
 }
 
 #welcome-screen-4 .ack {
     width: 28%;
-    height: 5rem;
-    margin-top: -0.75rem;
-    font-size: 2.5rem;
+    height: 2.5rem;
+    margin-top: -0.375rem;
+    font-size: 1.25rem;
 }
 
 
