adding new search

--- a/platforms/ios/www/templates/searchStatusUpdate.html
+++ b/platforms/ios/www/templates/searchStatusUpdate.html
@@ -1,6 +1,6 @@
-<h1 id='mcdonalds'>Post or ask for a recommendation</h1>
+
 <form id="status-update-search">
-	<input id='status-update-input' type='text' placeholder='Pick a movie, TV show, song etc' />
+	<input id='status-update-input' type='text' placeholder='Search for movie TV or song' />
 </form>
 <div id="search-wrapper">
 	<div id="search-results"></div>
