--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -395,7 +395,7 @@ header nav #notifications-menu #notifications-num {
 .messages #chat-num { display: none !important; }
 #tap-menu-clone,
 header nav #tap-menu {
-    background-image: url(../images/discovery/addIcon.png);
+    background-image: url(../images/home/search.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 50%;
@@ -476,7 +476,7 @@ header nav #tap-menu {
     text-transform: uppercase;
     color: rgb(81, 81, 81);
     text-align: center;
-    font-size: 0.7em;
+    font-size: 0.8em;
     padding: 15px;
     height: 61px;
 }
@@ -6133,7 +6133,7 @@ button#done {
 #menu-drop .result .info {
     margin: 0;
     float: left;
-    width:260px;
+
     text-align:left;
 }
 #menu-drop .result .info { width: 185px; }
