fix for chat num

--- a/platforms/ios/www/templates/homeHeader.html
+++ b/platforms/ios/www/templates/homeHeader.html
@@ -37,7 +37,7 @@
             <div id="notifications-num"></div>
         </div>
         <div id="profile-nav" style="background-image: url(<%= picture %>)">
-            <div class="rel"></div> <div id="chat-num"></div>
+            <!-- <div class="rel"></div> <div id="chat-num"></div> -->
         </div>
     <% } %>
 </nav>
