adding final onbaord

--- a/platforms/ios/www/templates/header.html
+++ b/platforms/ios/www/templates/header.html
@@ -33,7 +33,7 @@
             <div class="rel"></div><div id="notifications-num"></div>
         </div>
 	    <div id="chat-menu">
-	        <!-- <div class="rel"></div><div id="chat-num"></div> -->
+	        <div class="rel"></div><div id="chat-num"></div>
 	    </div>
 	<% } %>
 </nav>
