--- a/platforms/ios/www/templates/header.html
+++ b/platforms/ios/www/templates/header.html
@@ -28,6 +28,7 @@
         <div class="right button post" id="done-inter-button">Next</div>
     <% } else if(filterButton) { %> 
         <div class="right button done" id="rec-filter-button">Sort</div>
+    <% } else if(welcome) { %>
     <% } else { %>
         <div id="notifications-menu">
             <div class="rel"></div><div id="notifications-num"></div>
