--- a/platforms/ios/www/templates/welcomeScreen1.html
+++ b/platforms/ios/www/templates/welcomeScreen1.html
@@ -13,7 +13,7 @@
 
 		<form class="single-field-form user-favorite-interest">
 			<input type="text" class="movie-interest" placeholder="Search a movie...">
-			<button class="go">Go</button>
+			<div class="go">Go</div>
 		</form>
 		<div id="search-results"></div>
 	</div>
