bug fixes for new onbard and home

--- a/platforms/ios/www/templates/welcomeScreen2.html
+++ b/platforms/ios/www/templates/welcomeScreen2.html
@@ -6,14 +6,9 @@
 		<div class="welcome-message-container">
 			<section class="welcome-message">
 				<h1 class="headline">Thanks for sharing</h1>
-				<ul class="tastemates-row">
-					<li class="tastemate-item"><img class="avatar" src="../../images/welcome/avatar1.png"></li>
-					<li class="tastemate-item"><img class="avatar" src="../../images/welcome/avatar1.png"></li>
-					<li class="tastemate-item"><img class="avatar" src="../../images/welcome/avatar1.png"></li>
-					<li class="tastemate-item"><img class="avatar" src="../../images/welcome/avatar1.png"></li>
-					<li class="tastemate-item"><img class="avatar" src="../../images/welcome/avatar1.png"></li>						
-					<li class="more tastemate-item"><div class="more-count">64+</div></li>						
-				</ul>
+				<div class="tastemates-row">
+					
+				</div>
 				<h2 class="sub-headline">You're now tastemates with 69 other fans of The Matrix. Let's check out their top 10 recommendations for you.</h2>
 			</section>
 		</div>
