--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -7269,7 +7269,7 @@ h1.pop-up-content {
     margin: 0 0.25rem;
 }
 
-.tastemate-item .avatar, .tastemate-item.more {
+.tastemate-item.match, .tastemate-item .avatar, .tastemate-item.more {
     width: 2rem;
     height: 2rem;
     border-radius: 1rem;
