--- a/platforms/ios/www/css/welcome.css
+++ b/platforms/ios/www/css/welcome.css
@@ -20,7 +20,7 @@ html {
 	}
 } 
 
- iPhone 6+ 
+/* iPhone 6+ */ 
 @media screen and (min-device-width : 414px) and (max-device-width : 736px) and (-webkit-min-device-pixel-ratio : 3) {
 	
 	html {
