--- a/platforms/ios/www/css/main-4.7-inch.css
+++ b/platforms/ios/www/css/main-4.7-inch.css
@@ -214,7 +214,7 @@ div#mask .wheel {
 .swipe-icon.seen,
 .swipe-icon.not-seen { top: 350px; }
 #progress { top: 116px; }
-#progress .outer-bar { width: 300px; height: 6px; }
+#progress .outer-bar { height: 6px; }
 #progress .outer-bar #inner-bar { height: 6px; }
 #progress .numbers { line-height: 12px; }
 
