IOS-52, IOS-47, IOS-54: Friends is now Tastemates, change to colors of packlists, removed Top Rankings header

--- a/platforms/ios/www/templates/inviteUserList.html
+++ b/platforms/ios/www/templates/inviteUserList.html
@@ -1,6 +1,6 @@
-<div id="invite-friends">Invite Friends</div>
+<div id="invite-friends">Invite Tastemates</div>
 <div id="search-for-friends">
     <form id="search-users" name="search-users-form" action="#">
-        <input placeholder="Find Friends on Fabric" type="text" onfocus="this.placeholder=''" onfocusout="this.placeholder='Find Friends on Fabric'" />
+        <input placeholder="Find Tastemates on Fabric" type="text" onfocus="this.placeholder=''" onfocusout="this.placeholder='Find Tastemates on Fabric'" />
     </form>
 </div>
