--- a/platforms/ios/www/css/base.css
+++ b/platforms/ios/www/css/base.css
@@ -246,7 +246,7 @@ header nav h1, #available-services h1 {
     display: inline-block;
     background-size: 100%;
     position: relative;
-    width: 90px;
+    width: 5.7em;
 }
 
 header nav h1 {
@@ -346,8 +346,9 @@ header nav #profile-nav {
     border-radius: 50%;
     height: 40px;
     width: 40px;
-    right: 5px;
-    top: 5px;
+    right: 10px;
+    top: 12px;
+    box-shadow: 0px 0px 6px #700
 }
 header nav #shopping-cart,
 header nav #notifications-menu {
@@ -422,19 +423,19 @@ header nav #tap-menu {
     /* Pick */
 #tab-control {
     background-color: #A21600;
-    padding: 0 10px;
+    padding: 0 0 3px 10px;
 }
 #tab-control div {
     text-transform: uppercase;
     display: inline-block;
     text-align: center;
-    border-radius: 3px;
+    border-radius: 4px;
     font-weight: 600;
-    font-size: 0.9em;
+    font-size: 1em;
     color: white;
-    padding: 5px 2%;
-    margin: 7px 2%;
-    width: 25%;
+    padding: 1.6% 2%;
+    margin: 7px 6.3% 7px 5%;
+    width: 18%;
 }
 #tab-control div.active {
     background-color: white;
