--- a/platforms/ios/www/css/main-4.7-inch.css
+++ b/platforms/ios/www/css/main-4.7-inch.css
@@ -26,8 +26,8 @@
     padding-bottom: 10px;
 }
 header nav #profile-nav {
-    height: 42px;
-    width: 42px;
+    height: 40px;
+    width: 40px;
 }
 #people {
     font-size: 0.8em;
@@ -59,6 +59,16 @@ header nav #profile-nav {
     height: 25px;
     width: 25px;
     top: 7px;
+}
+#home-content .purchase-links a {
+    height: 36px;
+    width: 36px;
+    top: 0;
+}
+#home-content #pick-content {
+    padding: 72px 15px 18px;
+    font-weight: 600;
+    text-shadow: #222 1px 1px 1px;
 }
 #welcome div .title {
     padding-bottom: 5px;
