--- a/platforms/ios/www/templates/welcomeScreen2.html
+++ b/platforms/ios/www/templates/welcomeScreen2.html
@@ -9,7 +9,7 @@
 				<div class="tastemates-row">
 					
 				</div>
-				<h2 class="sub-headline">You're now tastemates with 69 other fans of The Matrix. Let's check out their top 10 recommendations for you.</h2>
+				<h2 class="sub-headline">You're now tastemates with <span class="m-count"></span> other fans of <%= title %>. Let's check out their top 10 recommendations for you.</h2>
 			</section>
 		</div>
 
