fixes to home build

--- a/platforms/ios/www/templates/pack.html
+++ b/platforms/ios/www/templates/pack.html
@@ -1,5 +1,5 @@
 <img class="pack-image" src="<%= tile_image %>" />
 <div class="pack-info">
 	<h4 class="pack-title"><%= title %></h4>
-	<p class="count"><%= limiter %> Movies</p>
+	<p class="count"><%= limiter %> <%= sectionName %></p>
 </div>
