--- a/platforms/ios/www/css/main-ipad.css
+++ b/platforms/ios/www/css/main-ipad.css
@@ -218,6 +218,7 @@
     }
 
     #home-content #people {
+        position: relative;
         font-size: 1.2em;
         height: 96px;
     }
@@ -226,6 +227,12 @@
         width: 54px;
         height: 54px;
         line-height: 54px;
+    }
+
+    #people .plus {
+        float: none;
+        position: absolute;
+        right: 7.9em;
     }
 
     /*
